WOLEET-1120: implement test
